...
            )
        }
    }
}

sealed class BottomNavItem(var title:String, var icon:Int, var screen_route:String){
    object Home : BottomNavItem("Home", R.drawable.ic_baseline_home_24, Home_SCREEN)
    object Favorite: BottomNavItem("Favorite",R.drawable.ic_baseline_favorite_border_24,
        FAVORITE_SCREEN)
    object Setting: BottomNavItem("Setting",R.drawable.ic_baseline_settings_24, SETTING_SCREEN)
}

